# stamp-date

./: README.md  pyproject.toml  stamp-dates-on-roster.py  stamping.py
stamp_date/: cli.py  dateutils.py  events.py
